Fix messages text overflow

--- a/style.css
+++ b/style.css
@@ -538,6 +538,10 @@ form .user-info .input-box input{
   margin-left: auto;
  }
 
+ .text_message {
+  word-wrap: break-word;
+ }
+
 
   
   
